@@ -1,15 +1,13 @@
 package genetic.crossover;
 
 import genetic.representation.Chromosome;
+import genetic.representation.ChromosomePair;
 import org.mockito.Mockito;
 import org.testng.annotations.Test;
 
-import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.List;
 import java.util.Random;
 
-import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.collection.IsIterableContainingInOrder.contains;
 import static org.mockito.Mockito.when;
@@ -18,27 +16,21 @@ public class SimpleCrossoverTest {
 
     private Random randomMock = Mockito.mock(Random.class);
 
-    private SimpleCrossover mixCrossover = new SimpleCrossover(1.0, randomMock);
+    private SimpleCrossover mixCrossover = new SimpleCrossover(randomMock);
 
     @Test
     public void testCrossOverChromosomes() throws Exception {
-        List<Chromosome> chromosomes = prepareData();
-        when(randomMock.nextInt(chromosomes.get(0).getSize() - 2)).thenReturn(3);
-        mixCrossover.crossOverChromosomes(chromosomes);
+        ChromosomePair chromosomePair = prepareData();
+        when(randomMock.nextInt(chromosomePair.getFirst().getSize() - 2)).thenReturn(3);
+        ChromosomePair afterCrossover = chromosomePair.crossover(mixCrossover);
 
-        assertThat(chromosomes.size(), is(2));
-        assertThat(chromosomes.get(0).getGenesValues(), contains(1, 2, 3, 4, 13, 14, 15, 16));
-        assertThat(chromosomes.get(1).getGenesValues(), contains(9, 10, 11, 12, 5, 6, 7, 8));
-
-        mixCrossover.crossOver(chromosomes);
+        assertThat(afterCrossover.getFirst().getGenesValues(), contains(1, 2, 3, 4, 13, 14, 15, 16));
+        assertThat(afterCrossover.getSecond().getGenesValues(), contains(9, 10, 11, 12, 5, 6, 7, 8));
     }
 
-    private List<Chromosome> prepareData() {
+    private ChromosomePair prepareData() {
         Chromosome first = Chromosome.createWithIntegerValues(Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8));
         Chromosome second = Chromosome.createWithIntegerValues(Arrays.asList(9, 10, 11, 12, 13, 14, 15, 16));
-        List<Chromosome> chromosomes = new ArrayList<>();
-        chromosomes.add(first);
-        chromosomes.add(second);
-        return chromosomes;
+        return new ChromosomePair(first, second);
     }
 }
